index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="77f198ba-be69-4b3a-935a-84723755b8af"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -15,7 +16,7 @@
             else if (/android/i.test(userAgent)) {
                 window.location.href = "https://play.google.com/store/apps/details?id=com.keris.contarvr";
             }
-            // 다른 OS의 경우 (옵션)
+            // 기타 OS
             else {
                 alert("지원되지 않는 운영체제입니다.");
             }
